; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_struct.c_assign.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_struct.c_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon = type { i32, i32, i32, i16, i8 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @assign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assign() #0 {
  %1 = alloca %struct.anon, align 4
  %2 = alloca %struct.anon, align 4
  %3 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 0
  store i32 3, i32* %3, align 4
  %4 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 1
  store i32 5, i32* %4, align 4
  %5 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 2
  store i32 7, i32* %5, align 4
  %6 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 3
  store i16 9, i16* %6, align 4
  %7 = getelementptr inbounds %struct.anon, %struct.anon* %1, i32 0, i32 4
  store i8 11, i8* %7, align 2
  %8 = bitcast %struct.anon* %2 to i8*
  %9 = bitcast %struct.anon* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 %9, i64 16, i1 false)
  %10 = getelementptr inbounds %struct.anon, %struct.anon* %2, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @expect(i32 3, i32 %11)
  %13 = getelementptr inbounds %struct.anon, %struct.anon* %2, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @expect(i32 5, i32 %14)
  %16 = getelementptr inbounds %struct.anon, %struct.anon* %2, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @expect(i32 7, i32 %17)
  %19 = getelementptr inbounds %struct.anon, %struct.anon* %2, i32 0, i32 3
  %20 = load i16, i16* %19, align 4
  %21 = sext i16 %20 to i32
  %22 = call i32 @expect(i32 9, i32 %21)
  %23 = getelementptr inbounds %struct.anon, %struct.anon* %2, i32 0, i32 4
  %24 = load i8, i8* %23, align 2
  %25 = sext i8 %24 to i32
  %26 = call i32 @expect(i32 11, i32 %25)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @expect(i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
